What's next/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuageup-service-ingress
spec:
  selector:
    app: nuageup
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 3000
