What's next/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuageup-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: test.nuageup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuageup-service-ingress
                port:
                  number: 5000
